reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_vec_external-3.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super :: into_rust_code :: < TestStructWithVecExternal > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn inout_test(
            &self,
            input: super::types::reflectapi_demo::tests::basic::TestStructWithVecExternal,
            headers: reflectapi::Empty,
        ) -> Result<
            super::types::reflectapi_demo::tests::basic::TestStructWithVecExternal,
            reflectapi::rt::Error<reflectapi::Empty, C::Error>,
        > {
            reflectapi::rt::__request_impl(&self.client, "/inout_test", input, headers).await
        }
    }

    #[cfg(feature = "reqwest")]
    impl Interface<reflectapi::rt::ReqwestClient<reqwest::Client>> {
        /// Convenience: build the client backed by a bare `reqwest::Client`
        /// and the given base URL. Hides the
        /// [`reflectapi::rt::ReqwestClient`] adapter so callers don't need
        /// to name it.
        pub fn try_new(
            client: reqwest::Client,
            base_url: reflectapi::rt::Url,
        ) -> std::result::Result<Self, reflectapi::rt::UrlParseError> {
            Ok(Self::new(reflectapi::rt::ReqwestClient::try_new(
                client, base_url,
            )?))
        }
    }
}
pub mod types {
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod basic {

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct TestStructWithVecExternal {
                    pub _f: std::vec::Vec<
                        super::super::super::reflectapi_demo::tests::test_lib::TestStructNested,
                    >,
                }
            }
            pub mod test_lib {

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct TestStructNested {
                    pub _f: std::string::String,
                }
            }
        }
    }
}
