reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_vec_nested-4.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithVecNested"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.basic.TestStructWithVecNested"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.basic.TestStructWithVecNested": {
        "type": "object",
        "title": "reflectapi_demo.tests.basic.TestStructWithVecNested",
        "required": [
          "_f"
        ],
        "properties": {
          "_f": {
            "description": "Expandable array type",
            "type": "array",
            "items": {
              "description": "Expandable array type",
              "type": "array",
              "items": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.test_lib.TestStructNested"
              }
            }
          }
        }
      },
      "reflectapi_demo.tests.test_lib.TestStructNested": {
        "type": "object",
        "title": "reflectapi_demo.tests.test_lib.TestStructNested",
        "required": [
          "_f"
        ],
        "properties": {
          "_f": {
            "$ref": "#/components/schemas/std.string.String"
          }
        }
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      }
    }
  }
}
