reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_vec_two.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::basic::TestStructWithVecTwo"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::basic::TestStructWithVecTwo"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "i8",
        "description": "8-bit signed integer"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::basic::TestStructWithVecTwo",
        "fields": {
          "named": [
            {
              "name": "_f",
              "type": {
                "name": "std::vec::Vec",
                "arguments": [
                  {
                    "name": "u8"
                  }
                ]
              },
              "required": true
            },
            {
              "name": "_f2",
              "type": {
                "name": "std::vec::Vec",
                "arguments": [
                  {
                    "name": "i8"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "i8",
        "description": "8-bit signed integer"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::basic::TestStructWithVecTwo",
        "fields": {
          "named": [
            {
              "name": "_f",
              "type": {
                "name": "std::vec::Vec",
                "arguments": [
                  {
                    "name": "u8"
                  }
                ]
              },
              "required": true
            },
            {
              "name": "_f2",
              "type": {
                "name": "std::vec::Vec",
                "arguments": [
                  {
                    "name": "i8"
                  }
                ]
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "std::vec::Vec",
        "description": "Expandable array type",
        "parameters": [
          {
            "name": "T"
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
